@@ -217,6 +217,7 @@ extern void pack_block(bg_record_t *bg_record, Buf buffer)
 	pack16((uint16_t)bg_record->node_use, buffer);	
 #endif
 	pack32((uint32_t)bg_record->node_cnt, buffer);
+	pack32((uint32_t)bg_record->job_running, buffer);
 	pack_bit_fmt(bg_record->bitmap, buffer);
 	pack_bit_fmt(bg_record->ionode_bitmap, buffer);
 #ifdef HAVE_BGL
