@@ -2421,7 +2421,8 @@ extern int get_new_info_job(job_info_msg_t **info_ptr,
 	static bool changed = 0;
 		
 	if(!force && ((now - last) < global_sleep_time)) {
-		error_code = SLURM_NO_CHANGE_IN_DATA;
+		if(*info_ptr != job_info_ptr) 
+			error_code = SLURM_SUCCESS;
 		*info_ptr = job_info_ptr;
 		if(changed) 
 			return SLURM_SUCCESS;
@@ -2446,6 +2447,10 @@ extern int get_new_info_job(job_info_msg_t **info_ptr,
 		changed = 1;
 	}
 	job_info_ptr = new_job_ptr;
+
+	if(*info_ptr != job_info_ptr) 
+		error_code = SLURM_SUCCESS;
+
 	*info_ptr = new_job_ptr;
 	return error_code;
 }
