@@ -9,6 +9,8 @@ documents those changes that are of interest to users and admins.
     NUDT.
  -- Configuration parameter ResumeDelay replaced by SuspendTimeout and 
     ResumeTimeout.
+ -- BLUEGENE - sview now displays correct cnode numbers for drained nodes 
+    or blocks in error state.
  -- Fix some batch job launch bugs when powering up suspended nodes.
 
 * Changes in SLURM 2.0.0-rc2
